k8s/accountstoelastic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: accountstoelastic-svc
  namespace: ecol
  label:
    app: accountstoelastic
spec:
  selector:
    app: accountstoelastic
  ports:
    - protocol: TCP
      port: 5401
      name: 5401-tcp
      targetPort: 5401
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accountstoelastic
  namespace: ecol
  labels:
    app: accountstoelastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accountstoelastic
  template:
    metadata:
      labels:
        app: accountstoelastic
    spec:
      containers:
      - name: accountstoelastic
        image: ecollect-registry.co-opbank.co.ke:30388/accounts_to_elastic:5.4
        ports:
        - containerPort: 5401
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: 1
