k8s/activitytomq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: activitylogtomq-svc
  namespace: ecol
  label:
    app: activitytomq
spec:
  selector:
    app: activitytomq
  ports:
    - protocol: TCP
      port: 5400
      name: 5400-tcp
      targetPort: 5400
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activitytomq
  namespace: ecol
  labels:
    app: activitytomq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: activitytomq
  template:
    metadata:
      labels:
        app: activitytomq
    spec:
      containers:
      - name: activitytomq
        image: ecollect-registry.co-opbank.co.ke:30388/activitytomq:5.4.2
        ports:
        - containerPort: 5400
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: 1
