k8s/birt-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: birt-svc
  namespace: ecol
  labels:
    app: birt
spec:
  selector:
    app: birt
  ports:
    - protocol: TCP
      port: 8004
      name: 8004-tcp
      targetPort: 8004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birt
  namespace: ecol
  labels:
    app: birt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: birt
  template:
    metadata:
      labels:
        app: birt
    spec:
      containers:
      - name: birt
        image: ecollect-registry.co-opbank.co.ke:30388/birt:25072022.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: '500m'
      imagePullSecrets:
      - name: reg-cred-secret
