k8s/callscheduller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: callscheduller-svc
  namespace: ecol
  label:
    app: callscheduller
spec:
  selector:
    app: callscheduller
  ports:
    - protocol: TCP
      port: 9000
      name: 9000-tcp
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callscheduller
  namespace: ecol
  labels:
    app: callscheduller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callscheduller
  template:
    metadata:
      labels:
        app: callscheduller
    spec:
      containers:
      - name: callscheduller
        image: ecollect-registry.co-opbank.co.ke:30677/callscheduller:18072022155511.2
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "500Mi"
            cpu: '100m'
          limits:
            memory: "500Mi"
            cpu: '200m'
