k8s/docx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docx-svc
  namespace: ecol
  labels:
    app: docx
spec:
  selector:
    app: docx
  ports:
    - protocol: TCP
      port: 8004
      name: 8004-tcp
      targetPort: 8004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docx
  namespace: ecol
  labels:
    app: docx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docx
  template:
    metadata:
      labels:
        app: docx
    spec:
      containers:
      - name: docx
        image: ecollect-registry.co-opbank.co.ke:30388/docxletters:18072022143446.4
        ports:
        - containerPort: 8004
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: '500m'
      imagePullSecrets:
      - name: reg-cred-secret
