k8s/docxv2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docxv2-svc
  namespace: ecol
  label:
    app: docxv2
spec:
  selector:
    app: docxv2
  ports:
    - protocol: TCP
      port: 8040
      name: 8040-tcp
      targetPort: 8040
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docxv2
  namespace: ecol
  labels:
    app: docxv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docxv2
  template:
    metadata:
      labels:
        app: docxv2
    spec:
      containers:
      - name: docxv2
        image: ecollect-registry.co-opbank.co.ke:30677/docxv2:18072022131934.10
        ports:
        - containerPort: 8004
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: '500m'
