k8s/ecollect_apis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ecollectapis-svc
  namespace: ecol
  labels:
    app: ecollectapis
spec:
  selector:
    app: ecollectapis
  ports:
    - protocol: TCP
      name: 8000-tcp
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecollectapis
  namespace: ecol
  labels:
    app: ecollectapis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecollectapis
  template:
    metadata:
      labels:
        app: ecollectapis
    spec:
      containers:
      - name: ecollectapis
        image: ecollect-registry.co-opbank.co.ke:30388/ecollect_apis:18072022143136.4
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "500m"
      imagePullSecrets:
      - name: reg-cred-secret
