k8s/esexternal.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: es-svc
  namespace: ecol
spec:
  ports:
  - port: 9200
---
apiVersion: v1
kind: Endpoints
metadata:
  name: es-svc
  namespace: ecol
subsets:
  - addresses:
      - ip: 172.16.20.139
    ports:
      - port: 9200
---
kind: Service
apiVersion: v1
metadata:
  name: external-mysql-service
spec:
  type: ExternalName
  externalName: example.domain.name
selector: {}
