k8s/minio-files.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-files-svc
  namespace: ecol
  labels:
    app: minio-files
spec:
  selector:
    app: minio-files
  ports:
    - protocol: TCP
      port: 4400
      name: 4400-tcp
      targetPort: 4400
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-files
  namespace: ecol
  labels:
    app: minio-files
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-files
  template:
    metadata:
      labels:
        app: minio-files
    spec:
      containers:
      - name: minio-files
        image: ecollecttst-registry.co-opbank.co.ke:30388/minio_files:18072022150220.2
        ports:
        - containerPort: 4400
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: '200m'
      imagePullSecrets:
      - name: reg-cred-secret
