k8s/mongodb-external-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb-svc
  namespace: ecol
spec:
  ports:
  - port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongodb-svc
  namespace: ecol
subsets:
  - addresses:
      - ip: 172.16.204.59
    ports:
      - port: 27017
