k8s/mongorest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongorest-svc
  namespace: ecol
  labels:
    app: mongorest
spec:
  selector:
    app: mongorest
  ports:
    - protocol: TCP
      port: 8500
      name: 8500-tcp
      targetPort: 8500
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongorest
  namespace: ecol
  labels:
    app: mongorest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongorest
  template:
    metadata:
      labels:
        app: mongorest
    spec:
      containers:
      - name: mongorest
        image: ecollecttst-registry.co-opbank.co.ke:30677/mongorest:18072022153040.2
        ports:
        - containerPort: 8500
        resources:
          requests:
            memory: "100Mi"
            cpu: '100m'
          limits:
            memory: "2Gi"
            cpu: '200'
      imagePullSecrets:
      - name: reg-cred-secret
