k8s/node-email.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-email-svc
  namespace: ecol
  labels:
    app: node-email
spec:
  selector:
    app: node-email
  ports:
    - protocol: TCP
      port: 8005
      name: 8005-tcp
      targetPort: 8005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-email
  namespace: ecol
  labels:
    app: node-email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-email
  template:
    metadata:
      labels:
        app: node-email
    spec:
      containers:
      - name: node-email
        image: ecollecttst-registry.co-opbank.co.ke:30677/node-email:18072022152400.2
        ports:
        - containerPort: 8005
        resources:
          requests:
            memory: "200Mi"
            cpu: '100m'
          limits:
            memory: "2Gi"
            cpu: '200m'
      imagePullSecrets:
      - name: reg-cred-secret
