k8s/nodeapi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapis-svc
  namespace: ecol
  labels:
    app: nodeapis
spec:
  selector:
    app: nodeapis
  ports:
    - protocol: TCP
      name: 6001-tcp
      port: 6001
      targetPort: 6001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapis
  namespace: ecol
  labels:
    app: nodeapis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapis
  template:
    metadata:
      labels:
        app: nodeapis
    spec:
      containers:
      - name: nodeapis
        image: ecollect-registry.co-opbank.co.ke:30677/oraclenode-apis-lb4:18072022142847.17
        ports:
        - containerPort: 6001
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: 1
