k8s/nodeapiv3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapisv3-svc
  namespace: ecol
  labels:
    app: nodeapisv3
spec:
  selector:
    app: nodeapisv3
  ports:
    - protocol: TCP
      name: 3000-tcp
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapisv3
  namespace: ecol
  labels:
    app: nodeapisv3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapisv3
  template:
    metadata:
      labels:
        app: nodeapisv3
    spec:
      containers:
      - name: nodeapisv3
        image: migutak/oraclenode-apis-lb4-v3:10082022001046.2
        ports:
        - containerPort: 6001
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: 1
      imagePullSecrets:
      - name: reg-cred-secret
