k8s/rabbitmq-external-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: ecol
spec:
  ports:
  - port: 5672
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rabbitmq
  namespace: ecol
subsets:
  - addresses:
      - ip: 172.16.19.151
    ports:
      - port: 5672
