k8s/redis-external-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: redis-svc
  namespace: ecol
spec:
  ports:
  - port: 6379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-svc
  namespace: ecol
subsets:
  - addresses:
      - ip: 172.16.204.72
    ports:
      - port: 6379
