k8s/redis.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: ecol
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      name: 6379-tcp
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: ecol
spec:
  serviceName: redis
  selector:
    matchLabels:
      app: redis
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: ecollecttst-registry.co-opbank.co.ke:30677/redis:6.2.6
        resources:
          limits:
            memory: 2Gi
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: redis-data
            mountPath: /usr/share/redis
  volumeClaimTemplates:                     
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
