k8s/reports-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: reports-svc
  namespace: ecol
spec:
  ports:
  - port: 5601
---
apiVersion: v1
kind: Endpoints
metadata:
  name: reports-svc
  namespace: ecol
subsets:
  - addresses:
      - ip: 172.16.204.37
    ports:
      - port: 5601
