k8s/uploads_coop.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: upload-svc
  namespace: ecol
  label:
    app: upload
spec:
  selector:
    app: upload
  ports:
    - protocol: TCP
      port: 3000
      name: 3000-tcp
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload
  namespace: ecol
  labels:
    app: upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload
  template:
    metadata:
      labels:
        app: upload
    spec:
      containers:
      - name: upload
        image: ecollect-registry.co-opbank.co.ke:30677/uploads:18072022162256.2 
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "200Mi"
            cpu: '100m'
          limits:
            memory: "1Gi"
            cpu: '100m'
