k8s/ingress-ecol.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
  name: ecollect-ing
  namespace: ecol
spec:
  ingressClassName: nginx
  rules:
  - host: ecollecttst-cbi.co-opbank.co.ke
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecollect-app
            port:
              number: 4430
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ecollectapis-svc
            port:
              number: 8000
      - path: /nodeapi
        pathType: Prefix
        backend:
          service:
            name: nodeapis-svc
            port:
              number: 6001
